// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toThrowValidationError fails for ValidationError with additional fields 1`] = `
"[32m- Expected fields  - 5[39m
[31m+ Received fields  + 0[39m

[2m  Array [[22m
[2m    Object {[22m
[2m      \\"constraint\\": \\"mustBeCorrect\\",[22m
[2m      \\"fieldName\\": \\"someField\\",[22m
[2m      \\"message\\": \\"Some field must be correct but its not\\",[22m
[2m    },[22m
[32m-   Object {[39m
[32m-     \\"constraint\\": \\"mustBeCorrectToo\\",[39m
[32m-     \\"fieldName\\": \\"someOtherField\\",[39m
[32m-     \\"message\\": \\"Some other field must be correct but its not\\",[39m
[32m-   },[39m
[2m  ][22m"
`;

exports[`toThrowValidationError fails for ValidationError with different constraint 1`] = `
"[32m- Expected fields  - 1[39m
[31m+ Received fields  + 1[39m

[2m  Array [[22m
[2m    Object {[22m
[32m-     \\"constraint\\": \\"different\\",[39m
[31m+     \\"constraint\\": \\"mustBeCorrect\\",[39m
[2m      \\"fieldName\\": \\"someField\\",[22m
[2m      \\"message\\": \\"Some field must be correct but its not\\",[22m
[2m    },[22m
[2m  ][22m"
`;

exports[`toThrowValidationError fails for ValidationError with different fieldName 1`] = `
"[32m- Expected fields  - 1[39m
[31m+ Received fields  + 1[39m

[2m  Array [[22m
[2m    Object {[22m
[2m      \\"constraint\\": \\"mustBeCorrect\\",[22m
[32m-     \\"fieldName\\": \\"different\\",[39m
[31m+     \\"fieldName\\": \\"someField\\",[39m
[2m      \\"message\\": \\"Some field must be correct but its not\\",[22m
[2m    },[22m
[2m  ][22m"
`;

exports[`toThrowValidationError fails for ValidationError with different fields 1`] = `
"[32m- Expected fields  - 3[39m
[31m+ Received fields  + 3[39m

[2m  Array [[22m
[2m    Object {[22m
[32m-     \\"constraint\\": \\"mustBeCorrectToo\\",[39m
[32m-     \\"fieldName\\": \\"someOtherField\\",[39m
[32m-     \\"message\\": \\"Some other field must be correct but its not\\",[39m
[31m+     \\"constraint\\": \\"mustBeCorrect\\",[39m
[31m+     \\"fieldName\\": \\"someField\\",[39m
[31m+     \\"message\\": \\"Some field must be correct but its not\\",[39m
[2m    },[22m
[2m  ][22m"
`;

exports[`toThrowValidationError fails for ValidationError with different message 1`] = `
"[32m- Expected fields  - 1[39m
[31m+ Received fields  + 1[39m

[2m  Array [[22m
[2m    Object {[22m
[2m      \\"constraint\\": \\"mustBeCorrect\\",[22m
[2m      \\"fieldName\\": \\"someField\\",[22m
[32m-     \\"message\\": \\"different\\",[39m
[31m+     \\"message\\": \\"Some field must be correct but its not\\",[39m
[2m    },[22m
[2m  ][22m"
`;

exports[`toThrowValidationError fails for ValidationError with no fields 1`] = `
"[32m- Expected fields  - 1[39m
[31m+ Received fields  + 7[39m

[32m- Array [][39m
[31m+ Array [[39m
[31m+   Object {[39m
[31m+     \\"constraint\\": \\"mustBeCorrect\\",[39m
[31m+     \\"fieldName\\": \\"someField\\",[39m
[31m+     \\"message\\": \\"Some field must be correct but its not\\",[39m
[31m+   },[39m
[31m+ ][39m"
`;

exports[`toThrowValidationError fails for error of other type 1`] = `"Expected error to be an instance of ValidationError but got Error"`;

exports[`toThrowValidationError fails when error is not thrown 1`] = `"Expected to receive an error or a function that throws an error"`;
